--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,13 +31,13 @@ jobs:
 
             - name: Deploy to Cloud Run
               run: |
-                  echo '${{ secrets.GCP_SA_KEY }}' > service.json
                   gcloud run deploy ${{ env.SERVICE_NAME }} \
                     --image=${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest \
                     --platform=managed \
                     --region=${{ env.REGION }} \
                     --allow-unauthenticated \
-                    --set-env-vars "GOOGLE_APPLICATION_CREDENTIALS=/app/service.json"
+                    --set-env-vars "GOOGLE_APPLICATION_CREDENTIALS=${{ secrets.GCP_SA_KEY }}"
+
 
             - name: Get Cloud Run URL
               run: |
