--- a/.github/workflows/artifact-registry.yml
+++ b/.github/workflows/artifact-registry.yml
@@ -29,9 +29,9 @@ jobs:
 
             - name: Build Docker Image
               run: |
-                  docker build \
+                  docker build . \
                     --build-arg GOOGLE_CREDENTIALS_JSON="${{ secrets.GCP_SA_KEY }}" \
-                    -t ${{ env.IMAGE_NAME }}:latest .
+                    -t ${{ env.IMAGE_NAME }}:latest 
 
             - name: Automatic Tagging of Releases
               id: increment-git-tag
