--- a/.github/workflows/artifact-registry.yml
+++ b/.github/workflows/artifact-registry.yml
@@ -27,9 +27,13 @@ jobs:
             - name: Set up Cloud SDK
               uses: google-github-actions/setup-gcloud@v2
 
+            - name: Install jq # Add this step
+              run: |
+                sudo apt-get update && sudo apt-get install -y jq
+
             - name: Write Google Credentials to File
               run: |
-                  echo '${{ secrets.GCP_SA_KEY }}' > /tmp/service.json
+                echo '${{ secrets.GCP_SA_KEY }}' | jq -r '.' > /tmp/service.json
 
             - name: Build Docker Image
               run: |
