--- a/.github/workflows/artifact-registry.yml
+++ b/.github/workflows/artifact-registry.yml
@@ -1,62 +1,47 @@
----
 name: Build and Push to Google Artifact Registry
 on:
-    push:
-        branches: [main]
+  push:
+    branches: [main]
 
 jobs:
-    build-push-artifact-registry:
-        name: Build and Push to Artifact Registry
-        runs-on: ubuntu-latest
+  build-push-artifact-registry:
+    name: Build and Push to Artifact Registry
+    runs-on: ubuntu-latest
 
+    env:
+      IMAGE_NAME: google-cloud-vision-api-with-gcr
+      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+      REGION: us-west2
+      REPOSITORY: images
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Build Docker Image
+        run: |
+          docker build . -t ${{ env.IMAGE_NAME }}:latest
+
+      - name: Automatic Tagging of Releases
+        id: increment-git-tag
+        run: bash ./scripts/git_update.sh -v major
+
+      - name: Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+
+      - name: Tag and Push to Artifact Registry
         env:
-            IMAGE_NAME: google-cloud-vision-api-with-gcr
-            PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-            REGION: us-west2
-            REPOSITORY: images
-
-        steps:
-            - name: Checkout Code
-              uses: actions/checkout@v4
-
-            - name: Authenticate to Google Cloud
-              uses: google-github-actions/auth@v2
-              with:
-                  credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-            - name: Set up Cloud SDK
-              uses: google-github-actions/setup-gcloud@v2
-
-            - name: Install jq # Add this step
-              run: |
-                sudo apt-get update && sudo apt-get install -y jq
-
-            - name: Write Google Credentials to File
-              run: |
-                echo '${{ secrets.GCP_SA_KEY }}' | jq -r '.' > /tmp/service.json
-                echo '------- Contents of /tmp/service.json -------'
-                cat /tmp/service.json
-
-            - name: Build Docker Image
-              run: |
-                  docker build . \
-                    --build-arg GOOGLE_CREDENTIALS_JSON_FILE="/tmp/service.json" \
-                    -t ${{ env.IMAGE_NAME }}:latest
-
-            - name: Automatic Tagging of Releases
-              id: increment-git-tag
-              run: |
-                  bash ./scripts/git_update.sh -v major
-
-            - name: Configure Docker for Artifact Registry
-              run: |-
-                  gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
-
-            - name: Tag and Push to Artifact Registry
-              env:
-                  GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
-              run: |-
-                  docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
-                  docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ env.GIT_TAG }}
-                  docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
-                  docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ env.GIT_TAG }}
+          GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
+        run: |
+          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
+          docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ env.GIT_TAG }}
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ env.GIT_TAG }}
