--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,44 @@
----
 name: Deploy to Google Cloud Run
-
 on:
-    workflow_run:
-        workflows: ["Build and Push to Google Artifact Registry"]
-        types:
-            - completed
+  workflow_run:
+    workflows: ["Build and Push to Google Artifact Registry"]
+    types:
+      - completed
 
 jobs:
-    deploy:
-        name: Deploy Latest Image to Cloud Run
-        runs-on: ubuntu-latest
+  deploy:
+    name: Deploy Latest Image to Cloud Run
+    runs-on: ubuntu-latest
 
-        env:
-            IMAGE_NAME: google-cloud-vision-api-with-gcr
-            PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-            REGION: us-west2
-            REPOSITORY: images
-            SERVICE_NAME: google-cloud-vision-api-with-gcr
+    env:
+      IMAGE_NAME: google-cloud-vision-api-with-gcr
+      PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+      REGION: us-west2
+      REPOSITORY: images
+      SERVICE_NAME: google-cloud-vision-api-with-gcr
 
-        steps:
-            - name: Authenticate to Google Cloud
-              uses: google-github-actions/auth@v2
-              with:
-                  credentials_json: ${{ secrets.GCP_SA_KEY }}
+    steps:
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-            - name: Set up Cloud SDK
-              uses: google-github-actions/setup-gcloud@v2
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
-            - name: Deploy to Cloud Run
-              run: |
-                  gcloud run deploy ${{ env.SERVICE_NAME }} \
-                    --image=${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest \
-                    --platform=managed \
-                    --region=${{ env.REGION }} \
-                    --allow-unauthenticated \
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy ${{ env.SERVICE_NAME }} \
+            --image=${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:latest \
+            --platform=managed \
+            --region=${{ env.REGION }} \
+            --allow-unauthenticated
 
-            - name: Get Cloud Run URL
-              run: |
-                  URL=$(gcloud run services describe ${{ env.SERVICE_NAME }} \
-                      --platform=managed \
-                      --region=${{ env.REGION }} \
-                      --format="value(status.url)")
-                  echo "Cloud Run URL: $URL"
-                  echo "URL=$URL" >> $GITHUB_ENV
-
+      - name: Get Cloud Run URL
+        run: |
+          URL=$(gcloud run services describe ${{ env.SERVICE_NAME }} \
+              --platform=managed \
+              --region=${{ env.REGION }} \
+              --format="value(status.url)")
+          echo "Cloud Run URL: $URL"
+          echo "URL=$URL" >> $GITHUB_ENV
